UF-9195: Add municipalityId.
